Fix unit selection attack system and server ESM configuration
- Fix unit selection overriding attack mode in GameScene.ts
- Fix attack highlighting to only show enemies in range
- Fix ActionMenu close button functionality
- Fix server import issues by switching to ESM + tsx
- Update port from 5177 to 5178 to resolve conflicts
- Improve action mode state synchronization between GameHUD and GameScene

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "shared"
   ],
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "tsx": "^4.20.3"
   }
 }
