feat: Add Render deployment support and environment-driven configuration
- Add render.yaml blueprint for one-click deployment
- Update server to use environment-driven ports, host, and CORS
- Create client config system for API/WebSocket URLs
- Add deployment guide and updated .gitignore
- Server now binds to 0.0.0.0 for production compatibility
- CORS and Socket.io origins configurable via environment variables
- Maintains local development experience (ports 5178/4001)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently -k -n client,server -c green,blue \"npm --workspace client run dev\" \"npm --workspace server run dev\"",
     "build": "npm -w client run build && npm -w server run build",
-    "start": "npm -w server start",
+    "start": "npm -w server run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
