--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,42 @@
-node_modules
+# Dependencies
+node_modules/
+**/node_modules/
+
+# Build outputs
 dist/
+**/dist/
+dist-ssr/
 *.tsbuildinfo
+
+# Environment files (contain sensitive URLs)
 .env
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS files
+Thumbs.db
