fix: Update render.yaml to use web service type for client deployment
- Change client service from 'static' to 'web' type (Render doesn't support static in blueprints)
- Add serve package to client dependencies for static file serving
- Use npx serve to serve the built dist folder
- Maintains same functionality but with Render-compatible configuration

--- a/render.yaml
+++ b/render.yaml
@@ -14,11 +14,14 @@ services:
         value: https://hrmageddon-client.onrender.com
       # If/when you add Postgres/Prisma, add DATABASE_URL here
 
-  - type: static
+  - type: web
     name: hrmageddon-client
+    env: static
     rootDir: client
+    plan: free
     buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    startCommand: npx serve -s dist -l $PORT
+    autoDeploy: true
     envVars:
       - key: VITE_API_URL
         value: https://hrmageddon-api.onrender.com
