fix: Update render.yaml to use static_site type for client deployment
- Change client service from 'web' to 'static_site' type (correct Render service type)
- Remove unnecessary env, plan, and startCommand for static site
- Use staticPublishPath: dist for proper static file serving
- Cleaner configuration for static site deployment

--- a/render.yaml
+++ b/render.yaml
@@ -12,15 +12,12 @@ services:
         value: 20
       - key: CLIENT_ORIGIN
         value: https://hrmageddon-client.onrender.com
-      # If/when you add Postgres/Prisma, add DATABASE_URL here
 
-  - type: web
+  - type: static_site
     name: hrmageddon-client
-    env: static
     rootDir: client
-    plan: free
     buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l $PORT
+    staticPublishPath: dist
     autoDeploy: true
     envVars:
       - key: VITE_API_URL
