fix: Another render.yaml update for Render compatibility
- Additional configuration changes to resolve Render deployment issues
- Continuing to troubleshoot Render blueprint deployment

--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: CLIENT_ORIGIN
         value: https://hrmageddon-client.onrender.com
 
-  - type: static_site
+  - type: static
     name: hrmageddon-client
     rootDir: client
     buildCommand: npm install && npm run build
