feat: add comprehensive testing infrastructure and pre-commit hooks
- Add test:strict and test:all npm scripts for comprehensive validation
- Create test-strict.js script for TypeScript, ESLint, and build validation
- Add pre-commit hook for automatic quality gates
- Implement strict testing with TypeScript strict mode and ESLint
- Add import/export validation and build testing
- Enable automatic validation before commits

Testing features:
- TypeScript strict compilation checking
- ESLint with strict rules enforcement
- Import/export validation
- Production build verification
- Pre-commit quality gates
- Comprehensive test coverage

--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:strict": "node scripts/test-strict.js",
+    "test:all": "npm run test:strict && npm run test:run"
   },
   "dependencies": {
     "phaser": "^3.90.0",
